<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_signinorupScreenPrimary"
    tools:context=".ui.AuthSignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AuthSignIn">

        <!-- App Bar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/dark_signinorupScreenPrimary"
                app:navigationIcon="@drawable/ic_arrow_back_white"
                app:title="" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="35dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintBottom_toTopOf="@id/catImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Welcome Back Text -->
            <TextView
                android:id="@+id/tvWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome_back"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Email Text Field -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/ic_mail"
                app:startIconTint="@null"
                app:startIconContentDescription="@string/prompt_email"
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:errorTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Spacing -->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <!-- Password Text Field -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:id="@+id/passwordLayout"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@null"
                app:startIconContentDescription="@string/prompt_password"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/ic_visibility"
                app:endIconTint="@color/white"
                app:endIconContentDescription="Show password"
                app:boxStrokeColor="@drawable/text_input_outline_color"
                app:hintTextColor="@drawable/text_input_hint_color"
                app:errorTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/action_sign_in"
                android:textAllCaps="false" />
        </LinearLayout>

        <!-- Peeking Cat Image -->
        <ImageView
            android:id="@+id/catImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageDescription_cat"
            android:src="@drawable/cat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
